# birkhoff_polytope_demo

./: HELLOWORLD.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
Birkhoff_Polytope_demo/: README.md  __init__.py  visualize_birkhoff.py
birkhoff_polytope_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
